syntax = "proto3";

package profile;
option go_package = "shop/backend/profile/api/proto;proto";

import "google/protobuf/empty.proto";

// Profile Service - handles user favorites, addresses and messages
service ProfileService {
  // User Favorite related methods
  rpc GetFavList(UserFavRequest) returns (UserFavListResponse);
  rpc AddUserFav(UserFavRequest) returns (google.protobuf.Empty);
  rpc DeleteUserFav(UserFavRequest) returns (google.protobuf.Empty);
  rpc GetUserFavDetail(UserFavRequest) returns (UserFavDetailResponse);

  // Address related methods
  rpc GetAddressList(AddressRequest) returns (AddressListResponse);
  rpc CreateAddress(AddressRequest) returns (AddressResponse);
  rpc DeleteAddress(AddressRequest) returns (google.protobuf.Empty);
  rpc UpdateAddress(AddressRequest) returns (google.protobuf.Empty);

  // Message related methods
  rpc GetMessageList(MessageRequest) returns (MessageListResponse);
  rpc CreateMessage(MessageRequest) returns (MessageResponse);
}

// User Favorite related messages
message UserFavRequest {
  int64 user_id = 1;
  int64 goods_id = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message UserFavListResponse {
  int32 total = 1;
  repeated UserFavResponse data = 2;
}

message UserFavResponse {
  int64 id = 1;
  int64 user_id = 2;
  int64 goods_id = 3;
  GoodsInfoResponse goods_info = 4;
  string created_at = 5;
}

message UserFavDetailResponse { bool is_fav = 1; }

message GoodsInfoResponse {
  int64 id = 1;
  string name = 2;
  string shop_price = 3;
  string image = 4;
  string category_name = 5;
  string brand_name = 6;
}

// Address related messages
message AddressRequest {
  int64 id = 1;
  int64 user_id = 2;
  string province = 3;
  string city = 4;
  string district = 5;
  string address = 6;
  string signer_name = 7;
  string signer_mobile = 8;
  bool is_default = 9;
  int32 page = 10;
  int32 page_size = 11;
}

message AddressResponse {
  int64 id = 1;
  int64 user_id = 2;
  string province = 3;
  string city = 4;
  string district = 5;
  string address = 6;
  string signer_name = 7;
  string signer_mobile = 8;
  bool is_default = 9;
}

message AddressListResponse {
  int32 total = 1;
  repeated AddressResponse data = 2;
}

// Message related messages
message MessageRequest {
  int64 id = 1;
  int64 user_id = 2;
  int32 message_type = 3;
  string subject = 4;
  string message = 5;
  string file = 6;
  int32 page = 7;
  int32 page_size = 8;
  repeated string images = 9;
}

message MessageResponse {
  int64 id = 1;
  int64 user_id = 2;
  int32 message_type = 3;
  string subject = 4;
  string message = 5;
  string file = 6;
  repeated string images = 7;
  string created_at = 8;
}

message MessageListResponse {
  int32 total = 1;
  repeated MessageResponse data = 2;
}