syntax = "proto3";
package v1inventoryproto;
option go_package = ".;v1inventoryproto";

service Inventory{
  rpc SetInv(GoodsInvInfo) returns(Empty); //设置库存
  rpc InvDetail(GoodsInvInfo) returns(GoodsInvInfo); //获取库存信息
  //我们一般买东西的时候喜欢从购物车中去买，批量，事务
  rpc Sell(SellInfo)returns(Empty); //库存扣减
  rpc Reback(SellInfo)returns(Empty); //库存归还
}

message Empty{}
message GoodsInvInfo {
  int32 goodsId = 1;
  int32 num = 2;
}
message SellInfo{
  repeated GoodsInvInfo goodsInfo = 1;
  string orderSn = 2;
}